logs/struthon.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/struthon'...
Listing './lib/python3.5/site-packages/struthon/ConcreteMonoSection'...
Listing './lib/python3.5/site-packages/struthon/ConcretePanel'...
Compiling './lib/python3.5/site-packages/struthon/ConcretePanel/ConcretePanel.py'...
***   File "./lib/python3.5/site-packages/struthon/ConcretePanel/ConcretePanel.py", line 139
    print 'csv'
              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/struthon/ConcretePanel/Example_data_files'...
Listing './lib/python3.5/site-packages/struthon/SteelBoltedConnection'...
Compiling './lib/python3.5/site-packages/struthon/SteelBoltedConnection/SteelBoltedConnection.py'...
***   File "./lib/python3.5/site-packages/struthon/SteelBoltedConnection/SteelBoltedConnection.py", line 300
    print 'wrong format'
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/struthon/SteelMember'...
Compiling './lib/python3.5/site-packages/struthon/SteelMember/SteelMember.py'...
***   File "./lib/python3.5/site-packages/struthon/SteelMember/SteelMember.py", line 221
    print type(language)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/struthon/SteelMember/reports.py'...
***   File "./lib/python3.5/site-packages/struthon/SteelMember/reports.py", line 253
    print '-------------------------'
                                    ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/struthon/SteelSectionBrowser'...
Compiling './lib/python3.5/site-packages/struthon/checkupdate.py'...
***   File "./lib/python3.5/site-packages/struthon/checkupdate.py", line 82
    print out[0]
            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/struthon-0.6.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
